--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andy Liu - Photographer</title>
+    <script defer src="https://cdn.jsdelivr.net/npm/three-js@79.0.0/three.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/gh/the-lazy-god/tlg-kaleidoscope@v2.0.1/tlg-kaleidoscope.min.js"></script>
     <!-- Preconnect to Cloudinary (image CDN) to reduce handshake latency -->
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
     <link rel="dns-prefetch" href="https://res.cloudinary.com">
@@ -13,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,400&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     <!-- Allow images to be stored in the HTTP cache for a long time -->
     <meta http-equiv="Cache-Control" content="public, max-age=31536000, immutable">
+    <!-- Snippets by The Lazy God • Kaleidoscope -->
   </head>
   <body>
     <div id="root"></div>
